--- a/Java/线程/锁.md
+++ b/Java/线程/锁.md
@@ -193,11 +193,11 @@ public class AtomicInteger extends Number implements java.io.Serializable {
 
 　　阻塞或唤醒一个 Java 线程需要操作系统切换 CPU 状态来完成，这种状态转换需要耗费处理器时间。如果同步代码块中的内存过于简单，状态转换消耗的时间有可能比用户代码执行的时间还要长。
 
-　　在许多场景中，同步资源的锁定时间很短，为了这一小段时间去却换线程，线程挂起和恢复现场的花费可能会让系统得不偿失。如果物理机器有多个处理器，能够让两个或以上的线程同时并发执行，就可以让后面那个请求锁的线程不放弃 CPU 的执行时间，看看持有锁的线程是否很快就会释放锁。
+　　在许多场景中，同步资源的锁定时间很短，为了这一小段时间去切换线程，线程挂起和恢复现场的花费可能会让系统得不偿失。如果物理机器有多个处理器，能够让两个或以上的线程同时并发执行，就可以让后面那个请求锁的线程不放弃 CPU 的执行时间，看看持有锁的线程是否很快就会释放锁。
 
 　　而为了让当前线程 “ 稍等一下 ”，需让当前线程进行自旋，如果在自旋完成后前面锁定同步资源的线程已经释放了锁，那么当前线程就可以不必阻塞而是直接获取同步资源，从而避免切换线程的开销。这就是自旋锁。
 
-　　在 Java 中，自旋锁是指尝试获取锁的线程不会立即阻塞，而是采用玄幻的方式去尝试获取锁，这样的好处是减少线程上下文切换的消耗，缺点是循环会消耗 CPU。
+　　在 Java 中，自旋锁是指尝试获取锁的线程不会立即阻塞，而是采用自旋的方式去尝试获取锁，这样的好处是减少线程上下文切换的消耗，缺点是循环会消耗 CPU。
 
 ![](image/自旋锁.png)
 
@@ -218,37 +218,37 @@ public class AtomicInteger extends Number implements java.io.Serializable {
 
 　　自旋锁在 JDK 1.4.2 中引入，使用 -XX:+UseSpinning 来开启。JDK 6 中变为默认开启，并且引入了自适应的自旋锁（适应性自旋锁）。
 
-　　自适应意味着自旋的时间（次数）不再固定，而是由前一次在同一个锁上的自旋时间及锁的拥有者的状态来决定。如果在同一个锁对象上，自旋等待刚刚成功获得过锁，并且持有锁的线程正在运行中，那么虚拟机就会认为这次自旋也是很有可能再次成功，进而它将允许自旋等待持续相对更长的时间。如果对于某个锁，自旋很少成功获得过，拿在以后尝试这个锁时将可能省略掉自旋过程，直接阻塞线程，避免浪费处理器资源。
+　　自适应意味着自旋的时间（次数）不再固定，而是由前一次在同一个锁上的自旋时间及锁的拥有者的状态来决定。如果在同一个锁对象上，自旋等待刚刚成功获得过锁，并且持有锁的线程正在运行中，那么虚拟机就会认为这次自旋也是很有可能再次成功，进而它将允许自旋等待持续相对更长的时间。如果对于某个锁，自旋很少成功获得过，那在以后尝试这个锁时将可能省略掉自旋过程，直接阻塞线程，避免浪费处理器资源。
 
 　　在自旋锁中，另有三种常见的锁形式：TicketLock、CLHlock 和 MCSlock。 
 
-## 3. 无锁 VS 偏向锁 VS 轻量级锁 VS 重量级锁
+## 4. 无锁 VS 偏向锁 VS 轻量级锁 VS 重量级锁
 
-　　这四种锁是指锁的状态，专门针对 synchronzied 的。
+　　这四种锁是指锁的状态，专门针对 synchronized  的。
 
-　　在 Java 5 通过引入锁升级的机制来实现高效 synchronzied。这三种锁的状态是通过对象监视器在对象头中的字段来表明的。 
+　　在 Java 5 通过引入锁升级的机制来实现高效 synchronized 。这三种锁的状态是通过对象监视器在对象头中的字段来表明的。 
 
-　　首先为什么 syynchronized 能实现线程同步？
+　　首先为什么 synchronized 能实现线程同步？
 
 　　在回答这个问题置线需要了解两个重要的概念：“Java 对象头”、“Monitor”。
 
-### 对象头
+### 4.1. 对象头
 
 　　synchronized 是悲观锁，在操作同步资源之前需要给同步资源先加锁，这把锁就是存在 Java 对象头里的，而 Java 对象头优势什么呢？
 
 　　以 Hotspot 虚拟机为例，Hotspot 的对象头主要包括两部分数据：Mark Word（标记字段）、Klass Pointer（类型指针）。
 
-　　Mark Word：默认存储对象的 HashCode，分代年龄和锁标志位信息。这些信息都是与对象自身定义无关的数据，所以 Mark Word 被设计成毅哥非固定的数据结构以便在极小的空间内存存储尽量多的数据。它会根据对象的状态复用自己的存储空概念，也就是说在运行期间 Mark Word 里存储的数据会随着锁标志位的变化而变化。
+　　Mark Word：默认存储对象的 HashCode，分代年龄和锁标志位信息。这些信息都是与对象自身定义无关的数据，所以 Mark Word 被设计成一个非固定的数据结构以便在极小的空间内存存储尽量多的数据。它会根据对象的状态复用自己的存储控件，也就是说在运行期间 Mark Word 里存储的数据会随着锁标志位的变化而变化。
 
 　　Klass Point：对象指向它的类元数据的指针，虚拟机通过这个指针来确定这个对象是哪个类的示例。
 
-### Monitor
+### 4.2. Monitor
 
 　　Monitor 是线程私有的数据结构，每一个线程都有一个可用 monitor record 列表，同时还有一个全局的可用列表。每一个被锁住的对象都会和一个 monitor 关联，同时 monitor 中有一个 Owner 字段存放拥有该锁的线程的唯一标识，标识该锁被这个线程占用。
 
-　　synchronzied 通过 Monitor 来实现线程同步，Monitor 是依赖于底层的操作系统的 Mytex Lock（互斥锁）来实现的线程同步。
+　　synchronized 通过 Monitor 来实现线程同步，Monitor 是依赖于底层的操作系统的 Mytex Lock（互斥锁）来实现的线程同步。
 
-　　如同在自旋锁中提到的 “ 阻塞或唤醒一个 Java 线程需要操作系统切换 CPU 状态来完成，这种状态转换需要耗费处理器时间。如果同步代码块中的内容过于简单，状态转换消耗的时间有可能比用户代码执行的时间还要长 ”。这种方式就是 synchronized 最初实现同步的方式，这就是 JDK 6 之前 synchronzied 效率低的原因。这种依赖于操作系统 Mutex Lock 所实现的锁称之为 “ 重量级锁 ”，JDK 6 中为了i暗哨获得锁和释放锁带来的性能消耗，引入了 “偏向锁” 和 “轻量级锁”。
+　　如同在自旋锁中提到的 “ 阻塞或唤醒一个 Java 线程需要操作系统切换 CPU 状态来完成，这种状态转换需要耗费处理器时间。如果同步代码块中的内容过于简单，状态转换消耗的时间有可能比用户代码执行的时间还要长 ”。这种方式就是 synchronized 最初实现同步的方式，这就是 JDK 6 之前 synchronized 效率低的原因。这种依赖于操作系统 Mutex Lock 所实现的锁称之为 “ 重量级锁 ”，JDK 6 中为了减少获得锁和释放锁带来的性能消耗，引入了 “ 偏向锁 ” 和 “ 轻量级锁 ”。
 
 　　所以目前锁一共有 4 种状态，级别从低到高依次是：无锁、偏向锁、轻量级锁和重量级锁。锁状态只能升级不能降级。
 
@@ -256,30 +256,30 @@ public class AtomicInteger extends Number implements java.io.Serializable {
 
 | 锁状态   | 存储内容                                                 | 存储内容 |
 | -------- | -------------------------------------------------------- | -------- |
-| 无锁     | 对象的hashCode、对象分代年龄、是否是偏向锁（O）          | 01       |
+| 无锁     | 对象的 hashCode、对象分代年龄、是否是偏向锁（O）         | 01       |
 | 偏向锁   | 偏向线程 ID、偏向时间戳、对象分代年龄、是否是偏向锁（1） | 01       |
 | 轻量级锁 | 指向栈中锁记录的指针                                     | 00       |
 | 重量级锁 | 指向互斥量（重量级锁）的指针                             | 10       |
 
-### 无锁
+### 4.3. 无锁
 
 　　无锁没有对资源进行锁定，所有的线程都能访问并修改同一个资源，但同时只有一个线程能修改成功。
 
 　　无锁的特点就是修改操作在循环内进行，线程会不断的尝试修改共享资源。如果没有冲突就修改成功并退出，否则就会继续循环尝试。如果有多个线程修改同一个值，必定会有一个线程能修改成功，而其他修改失败的线程会不断重试直到修改成功。上面介绍的 CAS 原理及应用即是无锁的实现。无锁无法全面代替有锁，但无锁在某些场合下的性能是非常高的。
 
-### 偏向锁
+### 4.4. 偏向锁
 
 　　偏向锁是指一段同步代码一直被一个线程所访问，那么该线程会自动获取锁，降低获取锁的代价。
 
 　　在大多数情况下，锁总是由同一个线程多次获得，不存在多线程竞争，所以出现了偏向锁。其目标就是在只有一个线程执行同步代码块时能够提高性能。
 
-　　当一个线程访问同步代码块并获取锁时，会在 Mark Woord 里存储锁偏向的线程 ID。在线程进入和退出同步块时不再通过 CAS 操作来加锁和解锁，而是检测 Mark Word 里是否存储着指向当前线程的偏向锁。引入偏向锁是为了在无多线程竞争的情况下尽量减少不必要的轻量级锁执行路径，因为轻量级锁的获取及释放依赖多次 CAS 原子指令，而偏向锁只需要在置换 ThreadID 的时候依赖多次 CAS 原子指令，而变量所只需要在置换 ThreadID 的时候依赖一次 CAS 原子指令即可。
+　　当一个线程访问同步代码块并获取锁时，会在 Mark Word 里存储锁偏向的线程 ID。在线程进入和退出同步块时不再通过 CAS 操作来加锁和解锁，而是检测 Mark Word 里是否存储着指向当前线程的偏向锁。引入偏向锁是为了在无多线程竞争的情况下尽量减少不必要的轻量级锁执行路径，因为轻量级锁的获取及释放依赖多次 CAS 原子指令，而偏向锁只需要在置换 ThreadID 的时候依赖多次 CAS 原子指令，而偏向锁只需要在置换 ThreadID 的时候依赖一次 CAS 原子指令即可。
 
 　　偏向锁只有遇到其他线程尝试竞争偏向锁时，持有偏向锁的线程才会释放锁，线程不会主动释放偏向锁。偏向锁的撤销，需要等待全局安全点（在这个时间点上没有字节码正在执行），它会首先暂停拥有偏向锁的线程，判断锁对象是否处于被锁定状态。撤销偏向锁后恢复到无锁（标志位为 “01” ）或轻量级锁（标志位为 “00” ）的状态。
 
 　　偏向锁在 JDK 6 及以后的 JVM 里是默认启用的。可以通过 JVM 参数关闭偏向锁：-XX:-UseBiasedLocking=false，关闭之后程序默认会进入轻量级锁状态。 
 
-### 轻量级锁
+### 4.5. 轻量级锁
 
 　　轻量级锁是指锁是偏向锁的时候，被另外的线程所访问，偏向锁就会升级为轻量级锁，其他线程会通过自旋的形式尝试获取锁，不会阻塞，从而提高性能。
 
@@ -293,11 +293,11 @@ public class AtomicInteger extends Number implements java.io.Serializable {
 
 　　若当前只有一个等待线程，则该线程通过自旋进行等待。但是当自旋超过一定的次数，或者一个线程在持有锁，一个在自旋，又有第三个来访问时，轻量级锁升级为重量级锁。
 
-### 重量解锁
+### 4.6. 重量解锁
 
 　　重量级锁是指当锁升级为重量级锁时，锁标志的状态值变为 "10"，此时 Mark Word 中存储的是指向重量级锁的指针，此时等待锁的线程都会进入阻塞状态。
 
-　　重量级锁是指当锁为轻量级锁的时候，另一个线程虽然是自旋，但自旋不会一直持续下去，当自旋一定次数的时候，还没有获取到锁，就会进入阻塞，该锁膨胀为重量级锁。重量级锁会让他申请的线程进入阻塞，性能降低。
+　　重量级锁是指当锁为轻量级锁的时候，另一个线程虽然是自旋，但自旋不会一直持续下去，当自旋一定次数的时候，还没有获取到锁，就会进入阻塞，该锁膨胀为重量级锁。重量级锁会让它申请的线程进入阻塞，性能降低。
 
 　　整体的锁状态升级流程图下：
 
@@ -305,7 +305,7 @@ public class AtomicInteger extends Number implements java.io.Serializable {
 
 　　综上，偏向锁通过对比 Mark Word 解决加锁问题，避免执行 CAS 操作。而轻量级锁通过用 CAS 操作和自旋来解决加锁问题，避免线程阻塞和唤醒而影响性能。重量级锁是将除了拥有锁的线程以外的线程都阻塞。
 
-## 4. 公平锁 VS 非公平锁
+## 5. 公平锁 VS 非公平锁
 
 　　公平锁是指多个线程按照申请所得顺序来获取锁，线程直接进入队列中排队，队列中的第一个线程才会获得锁。公平锁的优点是等待锁的线程不会饿死。缺点是整体吞吐效率相对非公平锁要低，等待队列中除了第一个线程以外的所有线程都会阻塞，CPU 唤醒阻塞线程的开销比非公平锁大。
 
@@ -930,7 +930,7 @@ protected final boolean tryAcquire(int acquires) {
 
 　　在资源进整不是很激烈的情况下，synchronized 的性能要优于 ReentrantLock，但是在资源竞争很激烈的情况下，synchronized 的性能会下降几十倍，但是 ReentrantLock 的性能能维持常态。
 
-## 10. 锁粗化 / 锁消
+## 10. 锁粗化 / 锁消除
 
 　　锁消除是指虚拟机即时编译器在运行时，对一些代码上要求同步，但是被检测到不可能存在共享数据竞争的锁进行消除。锁消除的主要判定依据来源于逃逸分析的数据支持，如果判断在一段代码中，堆上的所有数据都不会逃逸出去从而被其他线程访问到，那就可以把它们当做栈上数据对待，认为它们是线程私有的，同步加锁自然就无须进行。
 
