--- a/DataStructure/数据结构/树/二叉树.md
+++ b/DataStructure/数据结构/树/二叉树.md
@@ -1,6 +1,6 @@
 #  二叉树
 
-## 基本概念
+## 1. 基本概念
 
 　　二叉树是一个每个结最多只能有两个分支的树，左边的分支称之为左子树，右边的分支称之为右子树。
 
@@ -8,11 +8,11 @@
 
 ![](image/二叉树.png)
 
-## 二叉树的分类
+## 2. 二叉树的分类
 
-### 完美/满二叉树（Perfect Binary Tree）
+### 2.1. 完美/满二叉树（Perfect Binary Tree）
 
-　　完美二叉树也被称之为满二叉树。挖煤二叉树满足两个也行：
+　　完美二叉树也被称之为满二叉树。完美二叉树满足两个也行：
 
 1. 所有的结点都包含两个子结点。
 2. 所有的叶子结点的 Height 或者 Level 都相等。
@@ -21,29 +21,29 @@
 
 
 
-### 完全二叉树（Complete Binary Tree）
+### 2.2. 完全二叉树（Complete Binary Tree）
 
-　　完全二叉树是出了最后一层都是满的（都有两个子节点），并且最后一层的结点是从左往右排列的。
+　　完全二叉树是除了最后一层都是满的（都有两个子节点），并且最后一层的结点是从左往右排列的。
 
 　　完全二叉树，通俗点说就是结点按层从左往右排列。如果最后一层排满了就是完美二叉树，没有满则是完全二叉树。
 
 　　所以完美二叉树一定是完全二叉树，完全二叉树不一定是完美二叉树。
 
-　　一个完全二叉树可以高效的似乎用数组来表示。
+　　一个完全二叉树可以高效的使用数组来表示。
 
 ![](image/完全二叉树.png)
 
-### 完满二叉树（Full Binary Tree）
+### 2.3. 完满二叉树（Full Binary Tree）
 
-　　完满二叉树就是每个结点都有玩个子节点，也就是说比完美二叉树少了一个条件。
+　　完满二叉树就是每个结点都有两个子节点，也就是说比完美二叉树少了一个条件。
 
 ![](image/完满二叉树.png)
 
-## 二叉树的性质
+## 3. 二叉树的性质
 
-　　具有 n 个结点的完全二叉树的高度（或深度）为 取下整（long2n）+1，也可以写为 取上整 log2(n+1)。
+　　具有 n 个结点的完全二叉树的高度（或深度）为 取下整（log2n）+1，也可以写为取上整 log2(n+1)。
 
-##  二叉树的存储结构
+##  4. 二叉树的存储结构
 
 * 顺序存储结构：最适用于存储完全二叉树。
 * 链式存储结构：一个数据域，两个指针域的链式结点结构。
@@ -56,7 +56,7 @@ typedef struct BTNode{
 }BTNode;
 ```
 
-##  二叉树的存储表示
+##  5. 二叉树的存储表示
 
 * 二叉树的顺序表示
 * 二叉树的链式表示（二叉链表）
@@ -64,7 +64,7 @@ typedef struct BTNode{
 
 ![](image/二叉树的三叉链表.png)
 
-### 二叉树的顺序存储
+### 5.1. 二叉树的顺序存储
 
 　　下面用数组实现一个简单的二叉树：
 
@@ -102,8 +102,10 @@ public class ArrayBinaryTree<T> {
             throw new NoSuchElementException();
         }
         if (left) {
+            // parentIndex * 2 +1 就是 parentIndex 的左节点的存储位置
             nodes[parentIndex * 2 + 1] = data;
         } else {
+            // parentIndex * 2 +2 就是 parentIndex 的右节点的存储位置
             nodes[parentIndex * 2 + 2] = data;
         }
     }
@@ -167,14 +169,14 @@ public class ArrayBinaryTree<T> {
 }
 ```
 
-### 二叉树的链式存储
+### 5.2. 二叉树的链式存储
 
 ```java
 public class TwoLinkedBinaryTree<T> {
     class Node {
         Object data;
-        Node left;
-        Node right;
+        Node left; // 左节点
+        Node right; // 右节点
 
         public Node() {
 
@@ -245,7 +247,7 @@ public class TwoLinkedBinaryTree<T> {
 }
 ```
 
-### 二叉树的三叉链表存储
+### 5.3. 二叉树的三叉链表存储
 
 ```java
 /**
@@ -256,9 +258,9 @@ public class TwoLinkedBinaryTree<T> {
 public class ThreeLinkedBinaryTree<T> {
     class Node {
         Object data;
-        Node parent;
-        Node left;
-        Node right;
+        Node parent; // 父节点
+        Node left; // 左节点
+        Node right; // 右节点
 
         public Node() {
 
@@ -291,6 +293,7 @@ public class ThreeLinkedBinaryTree<T> {
     }
 
     public ThreeLinkedBinaryTree(T data) {
+        // 根节点
         this.root = new Node(data, null);
     }
 
@@ -332,9 +335,7 @@ public class ThreeLinkedBinaryTree<T> {
 
 ```
 
-
-
-##  二叉树的遍历
+##  6. 二叉树的遍历
 
 　　树的遍历主要有两种，一种是深度优先遍历，一个是广度优先遍历。
 
@@ -342,7 +343,13 @@ public class ThreeLinkedBinaryTree<T> {
 
 　　前序、中序、后序遍历区别在于访问节点的是前面访问还是中间访问还是后面访问。
 
-### 前序遍历
+　　前序遍历：当前节点 -> 左节点 -> 右节点。
+
+　　中序遍历：左节点 -> 当前节点 -> 右节点。
+
+　　后序遍历：左节点 -> 右节点 -> 当前节点。
+
+### 6.1. 前序遍历
 
 ```java
     /**
@@ -360,7 +367,7 @@ public class ThreeLinkedBinaryTree<T> {
     }
 ```
 
-### 中序遍历
+### 6.2. 中序遍历
 
 ```java
     /**
@@ -378,7 +385,7 @@ public class ThreeLinkedBinaryTree<T> {
     }
 ```
 
-### 后序遍历
+### 6.3. 后序遍历
 
 ```java
     /**
@@ -396,7 +403,7 @@ public class ThreeLinkedBinaryTree<T> {
     }
 ```
 
-### 广度优先遍历
+### 6.4. 广度优先遍历
 
 　　广度优先遍历也叫做按层遍历（一层一层的遍历节点）：
 
@@ -409,11 +416,13 @@ public class ThreeLinkedBinaryTree<T> {
         if (root == null) {
             return;
         }
-        Deque<Node> queue = new ArrayDeque<>();
+        Deque<Node> queue = new ArrayDeque<>();//双向队列
         queue.addLast(root);
         while (!queue.isEmpty()) {
+            // 从头拿出节点打印
             Node node = queue.removeFirst();
             System.out.print(node.data);
+            // 将节点的左子树和右子树放到队列的尾部
             if (node.left != null) {
                 queue.addLast(node.left);
             }
@@ -424,15 +433,13 @@ public class ThreeLinkedBinaryTree<T> {
     }
 ```
 
+##  7. 构造二叉树
 
-
-##  构造二叉树
-
-　　使用二叉树前序遍历建立二叉树
+　　使用二叉树前序遍历建立二叉树：
 
 ![](image/二叉树的前序遍历.png)
 
-　　构造二叉树
+　　构造二叉树：
 
 ![](image/构造二叉树.png)
 
@@ -440,7 +447,7 @@ public class ThreeLinkedBinaryTree<T> {
 
 ![](image/二叉树计数.png)
 
-##  线索化二叉树
+##  8. 线索化二叉树
 
 　　线索化二叉树，又称穿线树，将某种遍历顺序下的前驱、后继关系记在树的存储结构中，可以高效地找出某节点地前驱、后继。
 
@@ -448,9 +455,7 @@ public class ThreeLinkedBinaryTree<T> {
 
 ![](image/中序线索化二叉树.png)
 
-
-
-## 参考文章
+## 9. 参考文章
 
 1. [数据结构--知识点总结--树](https://blog.csdn.net/void_worker/article/details/80919901)
 2. [数据结构与算法（七）树和二叉树](https://chiclaim.blog.csdn.net/article/details/80574803)
