--- a/Java/线程/锁的知识.md
+++ b/Java/线程/锁的知识.md
@@ -1,4 +1,4 @@
-# 锁
+# 锁的知识
 
 　　Java 提供了种类丰富的锁，每种锁因其特性的不同 ，在适当的场景下能够展现出非常高的效率。
 
@@ -307,9 +307,17 @@ public class AtomicInteger extends Number implements java.io.Serializable {
 
 ## 5. 公平锁 VS 非公平锁
 
-　　公平锁是指多个线程按照申请所得顺序来获取锁，线程直接进入队列中排队，队列中的第一个线程才会获得锁。公平锁的优点是等待锁的线程不会饿死。缺点是整体吞吐效率相对非公平锁要低，等待队列中除了第一个线程以外的所有线程都会阻塞，CPU 唤醒阻塞线程的开销比非公平锁大。
+　　**公平锁**是指多个线程按照申请锁的顺序来获取锁，线程直接进入队列中排队，队列中的第一个线程才会获得锁。
 
-　　非公平锁是多个线程加锁时直接尝试获取锁，获取不到才会到等待队列的队尾等待，所以并不是按照申请锁的顺序。但如果此时锁刚好可用，那么这个线程可以无需阻塞直接获取到锁，所以非公平锁有可能出现后申请锁的线程先获取锁的场景。有可能，会造成优先级反转或者饥饿现象。非公平锁的优点是可以减少唤醒线程的开销，整体的吞吐效率高，因为线程有几率不阻塞直接获得锁，CPU 不必唤醒所有线程。缺点是处于等待队列中的线程可能会饿死，或者等很久才会获得锁。有可能会造成优先级反转或者饥饿现象。
+　　公平锁的优点是等待锁的线程不会饿死。
+
+　　公平锁的缺点是整体吞吐效率相对非公平锁要低，等待队列中除了第一个线程以外的所有线程都会阻塞，CPU 唤醒阻塞线程的开销比非公平锁大。
+
+　　**非公平锁**是多个线程加锁时直接尝试获取锁，获取不到才会到等待队列的队尾等待，所以并不是按照申请锁的顺序。但如果此时锁刚好可用，那么这个线程可以无需阻塞直接获取到锁，所以非公平锁有可能出现后申请锁的线程先获取锁的场景。也有可能会造成优先级反转或者饥饿现象。
+
+　　非公平锁的优点是可以减少唤醒线程的开销，整体的吞吐效率高，因为线程有机率不阻塞直接获得锁，CPU 不必唤醒所有线程。
+
+　　非公平锁的缺点是处于等待队列中的线程可能会饿死，或者等很久才会获得锁。有可能会造成优先级反转或者饥饿现象。
 
 　　用一个例子来讲述一下公平锁和非公平锁。
 
@@ -317,13 +325,17 @@ public class AtomicInteger extends Number implements java.io.Serializable {
 
 　　假设有一口水井，有管理员看守，管理员有一把琐，只有拿到锁的人才能够打水，打完水要把锁还给管理员。每个过来打水的人都要管理的允许并拿到锁之后才能去打水，如果前面有人正在打水，那么这个想要打水的人就必须排队。管理员会查看下一个要去打水的人是不是队伍里排最前面的人，如果是的话，才会给你锁让你去打水；如果你不是排第一的人，就必须去队尾排队，这就是公平锁。
 
-　　但是对于非公平锁，管理员对打水的人没有要求。及时等待队列里有排队等待的人，但如果在上一个人刚打完睡把锁还给管理员而且管理员还没有允许等待队伍里下一个人去打水时，正好来了一个插队的人，这个插队的人是可以直接从管理员那里拿到锁去打水，不需要排队，原本排队等待的人只能继续等待。如下图所示：
+　　但是对于非公平锁，管理员对打水的人没有要求。即使等待队列里有排队等待的人，但如果在上一个人刚打完水把锁还给管理员而且管理员还没有允许等待队伍里下一个人去打水时，正好来了一个插队的人，这个插队的人是可以直接从管理员那里拿到锁去打水，不需要排队，原本排队等待的人只能继续等待。如下图所示：
 
 ![](image/非公平锁.png)
+
+### 5.1. Java 中的公平锁和非公平锁
 
 　　对于 Java ReentrantLock 而言，通过构造函数指定该锁是否是公平锁，默认是非公平锁。非公平锁的有点在于吞吐量比公平锁大。
 
 　　对于 synchronzied 而言，也是一种非公平锁。由于其并不像 ReentrantLock 是通过 AQS 的来实现线程调度，所以并没有任何方法使其变成公平锁。
+
+#### 5.1.1. ReentrantLock 源码分析公平锁和非公平锁
 
 　　接下来通过 ReentrantLock 的源码来讲解公平锁和非公平锁。
 
@@ -370,9 +382,13 @@ public class ReentrantLock implements Lock, java.io.Serializable {
 }
 ```
 
-　　根据代码可知，ReentrantLock 里面有一个内部类 Sync，Sync 继承 AQS（AbstractQueuedSynchronizer），添加锁和释放锁的大部分操作实际上都是在 Sync 中实现的。它有公平锁 FairSync 和非公平锁 NonfairSyn 两个子类。ReentrantLock 默认使用非公平锁，也可以通过构造器来显示的指定使用公平锁。
+　　根据代码可知，ReentrantLock 里面有一个内部类 Sync，Sync 继承 AQS（AbstractQueuedSynchronizer），添加锁和释放锁的大部分操作实际上都是在 Sync 中实现的。
 
-　　公平锁与非公平锁的加锁方法的源码：
+　　Sync 有公平锁 FairSync 和非公平锁 NonfairSyn 两个子类。
+
+　　ReentrantLock 默认使用非公平锁，也可以通过构造器来显示的指定使用公平锁。
+
+　　公平锁加锁方法的源码：
 
 ```java
     /**
@@ -389,7 +405,7 @@ public class ReentrantLock implements Lock, java.io.Serializable {
             final Thread current = Thread.currentThread();
             int c = getState();
             if (c == 0) {
-                // hasQueuedPredecessors() 查询是否有任何线程等待获取的时间超过当前线程。
+                // hasQueuedPredecessors() 查询当前线程是否是同步队列中的第一个。
                 if (!hasQueuedPredecessors() &&
                     compareAndSetState(0, acquires)) {
                     setExclusiveOwnerThread(current);
@@ -409,7 +425,7 @@ public class ReentrantLock implements Lock, java.io.Serializable {
 
 ```
 
-
+　　非公平锁加锁方法的源码：
 
 ```java
     /**
@@ -472,13 +488,13 @@ public class ReentrantLock implements Lock, java.io.Serializable {
 
 　　综上，公平锁就是通过同步队列来实现多个线程按照申请锁的顺序来获取锁，从而实现公平的特性。非公平锁加锁时不考虑排队等待问题，直接尝试获取锁，所以存在后申请却先获得锁的情况。
 
-## 5. 可重入锁 VS 非可重入锁
+## 6. 可重入锁 VS 非可重入锁
 
-　　可重入锁又名递归锁，是指在同一个线程在外层方法获取锁的时候，在进入该线程的内层方法会自动获取锁（前提锁对象得是同一个对象或者 class），不会因为之前已经获取过还没释放而阻塞。Java 中 ReentrantLock 和 synchronized 都是可重入锁，可重入锁的一个优点是可一定程度避免死锁。
+　　可重入锁又名递归锁，是指在同一个线程在外层方法获取锁的时候，在进入该线程的内层方法会自动获取锁（前提锁对象得是同一个对象或者 class），不会因为之前已经获取过还没释放而阻塞。
 
-　　对于 Java ReentrantLock 而言，从名字就可以看出是一个重入锁，其名字是 Re entrant Lock 重新进入锁。
+　　Java 中 ReentrantLock 和 synchronized 都是可重入锁，可重入锁的一个优点是可一定程度避免死锁。
 
-　　对于 synchronzied 而言，也是一个可重入锁。可重入锁的一个好处是可一定程度避免死锁。
+### 6.1. 分析重入锁和非重入锁
 
 　　下面用示例代码来进行分析：
 
@@ -503,23 +519,25 @@ public class Widget {
 
 　　如果锁是不具有可重入性特点的话，那么线程在调用同步方法、含有锁的方法时就会产生死锁。
 
-　　而为什么可重入锁就可以在在嵌套调用时可以自动获得锁呢？通过图示和源码来分别解析一下。
+　　通过图示和源码来分别解析一下可重入锁和非可重入锁。
 
 　　有多个人在排队打水，此时管理员允许锁和同一个人的多个水桶绑定。这个人用多个水桶打水时，第一个水桶和锁绑定并打完水之后，第二个水桶也可以直接和锁绑定并开始打水，所有的水桶都打完水之后打水人才会将锁还给管理员。这个人的所有打水流程都能够成功执行，后续等待的人也能够打到水。这就是可重入锁。
 
 ![](image/可重入锁.png)
 
-　　但如果是非重入锁的话，此时管理员只允许锁和同一个人的一个水桶绑定。第一个水桶和锁绑定打完水之后并不会释放锁，倒是第二个水桶不能和锁绑定也无法打水。当前线程出现死锁，整个等待队列中的所有线程都无法被唤醒。
+　　但如果是非重入锁的话，此时管理员只允许锁和同一个人的一个水桶绑定。第一个水桶和锁绑定打完水之后并不会释放锁，导致第二个水桶不能和锁绑定也无法打水。当前线程出现死锁，整个等待队列中的所有线程都无法被唤醒。
 
 ![](image/非可冲入锁.png)
 
-　　之前说过 ReentrantLock 和 synchronized 都是重入锁，那么通过重入锁 ReentrantLock 以及非可重入锁 NonReentrantLock 的源码来对比分析一下为什么非可重入锁在重复覅用同步资源时会出现死锁。
+### 6.2. Java 中的可重入锁
+
+　　之前说过 ReentrantLock 和 synchronized 都是重入锁，那么通过重入锁 ReentrantLock 以及非可重入锁 NonReentrantLock 的源码来对比分析一下为什么非可重入锁在重复调用同步资源时会出现死锁。
 
 　　首先 ReentrantLock 和 NonTrrntrantLock 都继承父类 AQS，其父亲 AQS 中维护了一个同步状态 status 来计数重入次数，status 初始值为 0。
 
 　　当线程尝试获取锁时，可重入锁先尝试获取并更新 status 值，如果 status == 0 表示没有其他线程在执行同步代码，则把 status 置为 1，当前线程开始执行。如果 status != 0 ，则判断当前线程是否是获取到这个锁的线程，如果是的话执行 status+1，且当前线程可以再次获取锁。而非可重入锁时直接去获取并尝试更新当前 status 的值，如果 status != 0 的话会导致其获取锁失败，当前线程阻塞。
 
-　　释放锁时，可重入锁同样先获取当前 status 的值，在当前线程是持有锁的线程的前提下。如果 status-1 == 0，则表示当前线程所有重复获取锁的操作都以及执行完毕，然后该线程才能真正释放锁，而非可重入锁则是在确定当前线程是持有锁的线程之后，直接将 status 置为 0，将锁释放。
+　　释放锁时，可重入锁同样先获取当前 status 的值，在当前线程是持有锁的线程的前提下。如果 status-1 == 0，则表示当前线程所有重复获取锁的操作都已经执行完毕，然后该线程才能真正释放锁，而非可重入锁则是在确定当前线程是持有锁的线程之后，直接将 status 置为 0，将锁释放。
 
 ```java
 //ReentrantLock.java 可重入锁
@@ -538,7 +556,7 @@ final boolean nonfairTryAcquire(int acquires) {
         }
     }
     else if (current == getExclusiveOwnerThread()) {
-        // 获取锁时先判断，如果房前线程就是已经占有锁的线程，则 status 值 +1，并且返回 true。
+        // 获取锁时先判断，如果当前线程就是已经占有锁的线程，则 status 值 +1，并且返回 true。
         int nextc = c + acquires;
         if (nextc < 0) // overflow
             throw new Error("Maximum lock count exceeded");
@@ -550,7 +568,8 @@ final boolean nonfairTryAcquire(int acquires) {
 
         @ReservedStackAccess
         protected final boolean tryRelease(int releases) {
-            // 释放锁时也是先判断但钱线程是否时已占有锁的线程，然后再判断 status。如果 status 等于 0，才真正的释放锁。
+            
+            // 释放锁时也是先判断当前线程是否是已占有锁的线程，然后再判断 status。如果 status 等于 0，才真正的释放锁。
             int c = getState() - releases;
             if (Thread.currentThread() != getExclusiveOwnerThread())
                 throw new IllegalMonitorStateException();
@@ -562,12 +581,9 @@ final boolean nonfairTryAcquire(int acquires) {
             setState(c);
             return free;
         }
-```
 
- 
 
-```java
-// 非可重入锁
+// ReentrantLock.java 非可重入锁
 protected boolean tryAcquire(int acquires) {
     // 非可重入锁是直接尝试获取锁
 	if (this.compareAndSetStatues(0,1)){
@@ -590,29 +606,23 @@ protected boolean tryRelease(int releases){
 }
 ```
 
-
-
-## 6. 独享锁 VS 共享锁
+## 7. 独享锁 VS 共享锁
 
 　　独享锁和共享锁同样是一种概念。
 
-　　独享锁也叫排他锁，是指该锁一次只能被一个线程所持有。如果线程 T 对数据 A 加上排他锁后，则其他线程不能再对 A 加任何类型的锁。获得排他锁的线程既能读取数据又能修改数据。JDK 中的 synchronzied 和 JUC 中 Lock 的实现类就是互斥锁。
+　　**独享锁**也叫排他锁，是指该锁一次只能被一个线程所持有。如果线程 T 对数据 A 加上排他锁后，则其他线程不能再对 A 加任何类型的锁。获得排他锁的线程既能读取数据又能修改数据。JDK 中的 synchronzied 和 JUC 中 Lock 的实现类就是互斥锁。
 
-　　共享锁是指该锁可被多个线程所持有。如果线程 T 对数据 A 加上共享锁后，则其他线程只能对 A 再加共享锁，不能加排他锁。获得共享锁的线程只能读数据，不能修改数据。
+　　**共享锁**是指该锁可被多个线程所持有。如果线程 T 对数据 A 加上共享锁后，则其他线程只能对 A 再加共享锁，不能加排他锁。获得共享锁的线程只能读数据，不能修改数据。
 
 　　独享锁与共享锁也是通过 AQS 来实现的，通过实现不同的方法，来实现独享或者共享。
 
-
+### 7.1. Java 中的独享锁和共享锁
 
 　　对于 Java ReentrantLock 而言，其是独享锁。但是对于 Lock 的另一个实现类 ReadWriteLock，其读锁是共享锁，其写锁是独享锁。
 
-　　读锁的共享锁可保证并发读是非常高效的，读写、写读、写写的过程是互斥的。
-
-　　独享锁与共享锁也是通过 AQS 来实现的，通过实现不同的方法，来实现独享或者共享。
-
 　　对于 synchronized 而言，当然是独享锁。
 
-
+　　读锁的共享锁可保证并发读是非常高效的，读写、写读、写写的过程是互斥的。
 
 　　下面为 ReentrantReadWriteLock 的部分源码：
 
@@ -685,13 +695,13 @@ public class ReentrantReadWriteLock
 
 　　可以看到 ReentrantReadWriteLock 有两把锁：ReadLock 和 WriteLock，由词知意，一个读锁一个写锁，合称 “ 读写锁 ”。再进一步观察可以发现 ReadLock 和 WriteLock 是靠内部类 Sync 实现的锁。Sync 是 AQS 的一个子类，这种结构在 CountDownLatch、ReentrantLock、Semaphore 里面也都存在。
 
- 　　在 ReentrantReadWriteLock 里面，读锁和写锁的锁主体都是 Sync，但读锁和写锁的加锁方式不一样。读锁是共享锁，写锁是独享锁。读锁的共享锁可保证并发读非常高效，而读写、写读、写写的过程互斥，因为读锁和写锁是粉里的。所以 ReentrantReadWriteLock 的并发性相比一般的互斥锁有了很大提升。
+ 　　在 ReentrantReadWriteLock 里面，读锁和写锁的锁主体都是 Sync，但读锁和写锁的加锁方式不一样。读锁是共享锁，写锁是独享锁。读锁的共享锁可保证并发读非常高效，而读写、写读、写写的过程互斥，因为读锁和写锁是分离的。所以 ReentrantReadWriteLock 的并发性相比一般的互斥锁有了很大提升。
 
-　　那读锁和写锁的具体加锁方式有什么区别呢？早了解源码之前需要回顾一下其他知识。
+### 7.2. 读锁和写锁的具体加锁方式的区别
 
-　　在最开始提及 AQS 的时候也提到了 state 字段（int 类型，32 位），该字段用来描述有多少线程获持有锁。
+　　在最开始提及 AQS 的时候也提到了 state 字段（int 类型，32 位），该字段用来描述有多少线程持有锁。
 
-　　在独享锁中这个值通常是 0 或者 1（如果是重入锁的话 state 值就是重入的次数），在共享锁中 state 就是持有锁的数量。但是在 ReentrantReadWriteLock 中有读、写两把锁，所以需要在一个整型变量 state 上分别描述读锁和写锁的数量（或者也可以叫状态）。于是将 state 变量 “按位切割” 切分成了两个部分，高 16 位标识读锁状态（读锁个数），低 16 位标识写锁状态（写锁个数）。如下图所示：
+　　在独享锁中这个值通常是 0 或者 1（如果是重入锁的话 state 值就是重入的次数），在共享锁中 state 就是持有锁的数量。但是在 ReentrantReadWriteLock 中有读、写两把锁，所以需要在一个整型变量 state 上分别描述读锁和写锁的数量（或者也可以叫状态）。于是将 state 变量 “ 按位切割 ” 切分成了两个部分，高 16 位标识读锁状态（读锁个数），低 16 位标识写锁状态（写锁个数）。如下图所示：
 
 ![](image/state.png)
 
@@ -743,14 +753,14 @@ protected final boolean tryAcquire(int acquires) {
 * 这段代码首先取到当前锁的个数 c，然后再通过 c 来获取写锁的个数 w。因为写锁是低 16 位，所以取低 16 位的最大值与当前的 c 做与运算（int w = exclusiveCount(c);），高 16 位和 0 与运算后是 0，剩下的就是低位运算的值，同时也是持有写锁的线程数目。
 * 在取到写锁线程的数目后，首先判断是否已经有线程持有了锁。如果已经有线程持有了锁（c != 0），则查看当前写锁线程的数目，如果写线程数为 0（即此时存在读锁）或者持有锁的线程不是当前线程就返回失败（涉及到公平锁和非公平锁的实现）。
 * 如果写入锁的数量大于最大数（65535，2 的 16 次方 -1）就抛出一个 Error。
-* 如果当且写线程数为 0 （那么读线程也应该为 0，因为上面已经处理 c!=0 的情况），并且当前线程需要阻塞那么就返回失败；如果通过 CAS 增加写线程失败也返回失败。
+* 如果当前写线程数为 0 （那么读线程也应该为 0，因为上面已经处理 c!=0 的情况），并且当前线程需要阻塞那么就返回失败；如果通过 CAS 增加写线程失败也返回失败。
 * 如果 c=0，w=0 或者 c>0，w>0（重入），则设置当前线程或锁的拥有者，返回成功！
 
-　　tryAcquire() 除了重入条件（当前线程为获取了写锁的线程）之外，增加了一个读锁是否存在的判断。如果存在读锁，则写锁不能被获取，原因在于：必须确保写锁的操作对读锁可见，如果允许读锁再已被获取的情况下对写锁的获取，那么正在运行的去哦他读锁线程就无法感知到当前写线程的操作。
+　　tryAcquire() 除了重入条件（当前线程为获取了写锁的线程）之外，增加了一个读锁是否存在的判断。如果存在读锁，则写锁不能被获取，原因在于：必须确保写锁的操作对读锁可见，如果允许在读锁已被获取的情况下对写锁的获取，那么正在运行的其他读锁线程就无法感知到当前写线程的操作。
 
-　　因此，只有等待其他读线程都释放了读锁，写锁才能被当前线程获取，而写锁一旦被获取，则其他读写线程的后续访问均被阻塞。写锁的释放与 ReentrantLock 的释放过程基本类似，每次释放菌减少写状态，当写状态为 0 时标识写锁已被释放，然后等待的读写线程才能够继续访问读写锁，同时前次写线程的修改对后续的读写线程可见。
+　　因此，只有等待其他读线程都释放了读锁，写锁才能被当前线程获取，而写锁一旦被获取，则其他读写线程的后续访问均被阻塞。写锁的释放与 ReentrantLock 的释放过程基本类似，每次释放均减少写状态，当写状态为 0 时标识写锁已被释放，然后等待的读写线程才能够继续访问读写锁，同时前次写线程的修改对后续的读写线程可见。
 
-　　接着时读锁的代码：
+　　接着是读锁的代码：
 
 ```java
         @ReservedStackAccess
@@ -771,10 +781,13 @@ protected final boolean tryAcquire(int acquires) {
              *    saturated, chain to version with full retry loop.
              */
             Thread current = Thread.currentThread();
+            // 取得当前锁的个数
             int c = getState();
+            // 写锁的个数不等于 0 并且当前线程不是锁住的那个线程
             if (exclusiveCount(c) != 0 &&
                 getExclusiveOwnerThread() != current)
                 return -1;
+            // 获取读锁
             int r = sharedCount(c);
             if (!readerShouldBlock() &&
                 r < MAX_COUNT &&
@@ -799,9 +812,11 @@ protected final boolean tryAcquire(int acquires) {
         }
 ```
 
-　　可以看到在 tryAcquireShred(int unused) 方法中，如果其他线程已经获取了写锁，则当前线程获取读锁失败，进入等待状态。如果当前线程获取了写锁或者写锁违背获取，则当前线程（线程安全，依靠 CAS 保证）增加读状态，成功获取读锁。读锁的每次释放（线程安全的，可能有多个读线程同时释放读锁）均减少读状态，减少的值是 “1<<16”。所以读写锁才能实现读读的过程共享，而读写、写读、写写的过程互斥。
+　　可以看到在 tryAcquireShared(int unused) 方法中，如果其他线程已经获取了写锁，则当前线程获取读锁失败，进入等待状态。如果当前线程获取了写锁或者写锁未被获取，则当前线程（线程安全，依靠 CAS 保证）增加读状态，成功获取读锁。读锁的每次释放（线程安全的，可能有多个读线程同时释放读锁）均减少读状态，减少的值是 “1<<16”。所以读写锁才能实现读读的过程共享，而读写、写读、写写的过程互斥。
 
-　　此时，再回头看一下互斥锁 ReentrantLock 中公平锁和非同屏所的加锁源码：
+　　此时，再回头看一下互斥锁 ReentrantLock 中公平锁和非公平锁的加锁源码。
+
+　　公平锁的加锁源码：
 
 ```java
 // 公平锁
@@ -809,7 +824,7 @@ protected final boolean tryAcquire(int acquires) {
             final Thread current = Thread.currentThread();
             int c = getState();
             if (c == 0) {
-                // hasQueuedPredecessors() 查询是否有任何线程等待获取的时间超过当前线程。
+                // hasQueuedPredecessors() 查询当前线程是否是同步队列中的第一个。
                 if (!hasQueuedPredecessors() &&
                     compareAndSetState(0, acquires)) {
                     setExclusiveOwnerThread(current);
@@ -827,7 +842,7 @@ protected final boolean tryAcquire(int acquires) {
         }
 ```
 
-
+　　非公平锁的加锁源码：
 
 ```java
         // 非公平锁
@@ -852,94 +867,42 @@ protected final boolean tryAcquire(int acquires) {
         }
 ```
 
-　　发现公平锁和非公平锁如果在当前线程不是拥有锁的线程时，就不能添加锁，所以它们添加的都是独享锁。
+　　发现在 ReentrantLock 虽然有公平锁和非公平锁两种，但是如果当前线程不是拥有锁的线程时，就不能添加锁，所以它们添加的都是独享锁。
 
-　　发现在 ReentrantLock 虽然有公平锁和非公平锁两种，但是它们添加的都是独享锁。根据源码所示，当某一个线程调用 lock 方法获取锁是，如果同步资源没有被其他线程锁住，那么当前线程在使用 CAS 更新 state 成功后就会成功抢占该资源。而如果公共资源被占用且不能被当前线程占用，那么就会加锁失败。所以可以确定 ReentrantLock 无论读操作还是写操作，添加的锁都是独享锁。
+　　根据源码所示，当某一个线程调用 lock 方法获取锁时，如果同步资源没有被其他线程锁住，那么当前线程在使用 CAS 更新 state 成功后就会成功抢占该资源。而如果公共资源被占用且不能被当前线程占用，那么就会加锁失败。所以可以确定 ReentrantLock 无论读操作还是写操作，添加的锁都是独享锁。
 
-## 7. 互斥锁 / 读写锁
+## 8. 互斥锁 / 读写锁
 
 　　上面讲的独享锁/共享锁是一种广义的说法，互斥锁/读写锁就是具体的实现。
 
 　　互斥锁在 Java 中的具体实现就是 ReentrantLock。
 
-　　读写锁在 Java 中的具体实现就是 ReenntrantReadWriteLock。
+　　读写锁在 Java 中的具体实现就是 ReentrantReadWriteLock。
 
-## 8. 分段锁
+## 9. 分段锁
 
 　　分段锁其实是一种锁的设计，并不是具体的一种锁，对于 ConcurrentHashMap 而言，其并发的实现就是通过分段锁的形式来实现高效的并发操作。
 
-　　以 ConcurrentHashMap 来说一下分段锁的含义以及设计思想，ConcurrentHashMap 中的分段锁称为 Segment，它即类似于 HashMap（JDK 7 和 JDK 8 中 HashMap 的实现）的结构，即内部拥有一个 Entry 数组，数组中的每个元素又是一个链表；同时又是一个 ReentrantLock（Segment 继承了 ReentrantLock）。
+　　以 ConcurrentHashMap 来说一下分段锁的含义以及设计思想，ConcurrentHashMap 中的分段锁称为 Segment（JDK 1.7），它即类似于 HashMap（JDK 7 和 JDK 8 中 HashMap 的实现）的结构，即内部拥有一个 Entry 数组，数组中的每个元素又是一个链表；同时 segment 又是一个 ReentrantLock（Segment 继承了 ReentrantLock）。
 
-　　当需要 put 元素的时候，并不是对整个 hashmap 进行加锁，而是先通过 hashCode 来知道他要放在哪一个分段中，然后对这个分段进行加锁，所以当多线程 put 的时候，只要不是放在一个分段中，就实现了真正的并行的插入。
+　　当需要 put 元素的时候，并不是对整个 hashmap 进行加锁，而是先通过 hashCode 来知道它要放在哪一个分段中，然后对这个分段进行加锁，所以当多线程 put 的时候，只要不是放在一个分段中，就实现了真正的并行的插入。
 
 　　但是，在统计 size 的时候，可就是获取 hashmap 全局信息的时候，就需要获取所有的分段锁才能统计。
 
 　　分段锁的设计目的是细化锁的粒度，当操作不需要更新整个数组的时候，就仅仅针对数组中的一项进行加锁操作。
 
-## 9. 常见的锁
-
-　　synchronzied 可重入、分公平、独占锁。
-
-　　ReentrantLock 既可以构造公平锁又可以构造非公平锁，默认为非公平锁。可重入锁。
-
-　　ReentrantReadWriteLock 读写锁的性能都会比排他锁要好，因为大多数场景读是多于写的。在读多于写的情况下，读写锁能够提供比排他锁更好的并发性和吞吐量。Java 并法宝提供读写锁的实现是 ReentrantReadWriteLock。
-
-| 特性       | 说明                                                         |
-| ---------- | ------------------------------------------------------------ |
-| 公平性选择 | 支持非公平（默认）和公平的锁获取方式，吞吐量还是非公平优于公平。 |
-| 重进入     | 该锁支持重进入，以读写线程为例：读线程在获取了读锁之后，能够再次获取读锁。而写线程在获取了写锁之后能够再次获取写锁，同时也可以获取读锁。 |
-| 锁降级     | 遵循获取写锁、获取读锁在释放写锁的次序，写锁能够降级成为读锁 |
-
-### synchronzied 和 Lock
-
-* synchronized，它就是一个：非公平、悲观、独享、互斥、可重入的重量级锁。
-* ReentrantLock，它是一个默认非公平但可实现公平的、悲观、独享、互斥、可重入的重量级锁。
-* ReentrantReadWriteLock，它是一个默认非公平但可实现公平的、悲观、写独享、读共享、读写、可重入的重量级锁。
-
-### ReentrantLock 与 sunchronized 的区别
-
-#### 1. 中断等待
-
-　　ReentrantLock 拥有 synchronized 相同的并发性和内存语义，此外还多了锁投票，定时锁等待和中断锁等候。
-
-　　线程 A 和 B 都要获取对象 O 的锁定，假设 A 获取了对象 O 锁，B 将等待 A 释放对 O 的锁定。
-
-* 如果使用 synchronized，如果 A 不释放，B 将一直等下去，不能被中断。
-* 如果使用 ReentrantLock，如果 A 不释放，可以使 B 在等待了足够长的时间以后，中断等待，而干别的事情。
-
-##### ReentrantLock 获取锁定有三种方式
-
-1. lock()，如果获取了锁立即返回，如果别的线程持有锁，当前线程则一直处于休眠状态，直到获取锁。
-2. tryLock()，如果获取了锁立即返回 true，如果别的线程正持有锁，立即返回 false。
-3. tryLock(long timeout, TimeUnit unit)，如果获取了锁定立即返回 true，如果别的线程正持有锁，会等待参数给定的时间，在等待的过程中，如果获取了锁定，就返回 true，如果等待超时，返回 false。
-4. lockInterruptibly：如果获取了锁定理解返回，如果没有获取锁定，当前线程处于休眠状态，直到获取锁定，或者当前线程被别的线程中断。
-
-#### 2. 可实现公平锁
-
-　　对于 Java ReentrantLock 而言，通过构造函数指定该锁是否是公平锁，默认是非公平锁。非公平锁的优点在于吞吐量比公平锁大。
-
-#### 3. 锁绑定多个条件
-
-　　锁绑定多个条件是指一个 ReentrantLock 对象可以同时绑定多个 Condition 对象，而在 synchronized 中，锁对象的 wait() 和 notify() 或 notifyAll() 方法可以实现一个隐含的条件，如果要和多于一个的条件关联的时候，就不得不额外地添加一个锁，而 ReentrantLock 则无须这样做，只需要多次调用 newCondition() 方法即可。
-
-### synchronized 的优势
-
-　　synchronized 是在 JVM 层面上实现的，不但可以通过一些监控工具监控 synchronized 的锁定，而且在代码执行时出现异常，JVM 会自动释放锁定，但是使用 Lock 则不行，lock 是通过代码实现的，要保证锁定一定会被释放，就必须将 unLock() 放到 finally{} 中。
-
-### 应用场景
-
-　　在资源进整不是很激烈的情况下，synchronized 的性能要优于 ReentrantLock，但是在资源竞争很激烈的情况下，synchronized 的性能会下降几十倍，但是 ReentrantLock 的性能能维持常态。
-
 ## 10. 锁粗化 / 锁消除
 
-　　锁消除是指虚拟机即时编译器在运行时，对一些代码上要求同步，但是被检测到不可能存在共享数据竞争的锁进行消除。锁消除的主要判定依据来源于逃逸分析的数据支持，如果判断在一段代码中，堆上的所有数据都不会逃逸出去从而被其他线程访问到，那就可以把它们当做栈上数据对待，认为它们是线程私有的，同步加锁自然就无须进行。
+　　**锁消除**是指虚拟机即时编译器在运行时，对一些代码上要求同步但是被检测到不可能存在共享数据竞争的锁进行消除。
 
-　　如果一系列的连续操作都对同一个对象反复加锁和解锁，甚至加锁操作是出现在循环体中的，那即使没有线程竞争，频繁地进行互斥同步操作也会导致不必要地性能损耗。如果虚拟机探测到有这样一串零碎地操作都对同一个对象加锁，将会把加锁同步地范围扩展（粗化）到整个操作序列地外部。
+　　锁消除的主要判定依据来源于逃逸分析的数据支持，如果判断在一段代码中，堆上的所有数据都不会逃逸出去从而被其他线程访问到，那就可以把它们当做栈上数据对待，认为它们是线程私有的，同步加锁自然就无须进行。
 
-　　锁粗化和消除其实设计原理都差不多，都是为了减少没必要的加锁。
+　　**锁粗化**：如果一系列的连续操作都对同一个对象反复加锁和解锁，甚至加锁操作是出现在循环体中的，那即使没有线程竞争，频繁地进行互斥同步操作也会导致不必要地性能损耗。如果虚拟机探测到有这样一串零碎地操作都对同一个对象加锁，将会把加锁同步的范围扩展（粗化）到整个操作序列的外部。
+
+　　锁粗化和锁消除其实设计原理都差不多，都是为了减少没必要的加锁。
 
 
-## 参考文章
+## 11. 参考文章
 1. [java中的各种锁详细介绍](https://www.cnblogs.com/jyroy/p/11365935.html)
 2. [Java中的锁分类与使用](https://www.cnblogs.com/hustzzl/p/9343797.html)
 3. [java中的几种锁（很详细）-小白收藏](https://blog.csdn.net/Hdu_lc14015312/article/details/100053032)
