--- a/Android/后续.md
+++ b/Android/后续.md
@@ -18,3 +18,5 @@ https://zhuanlan.zhihu.com/p/30691789 性能优化
 https://github.com/yangkun19921001/Blog blog Android 面试宝典、数据结构和算法、音视频 (FFmpeg、AAC、x264、MediaCodec)、 C/C++ 、OpenCV、跨平台等学习记录
 
 https://github.com/chiclaim/AndroidAll 最全的 Android 技术栈
+
+https://github.com/BlackZhangJX/Android-Notes Android开发核心知识点
