--- a/DataStructure/数据结构/树/二分搜索树.md
+++ b/DataStructure/数据结构/树/二分搜索树.md
@@ -1,5 +1,7 @@
 #  二分搜索树
 
+## 1. 概述
+
 　　二分搜索树（Binary Search Tree），也称为二叉查找树、二叉搜索树、有序二叉树（ordered binary tree）或排序二叉树（Sorted binary tree）。
 
 　　二分搜索树（Binary Search Tree）满足以下几个条件：
@@ -8,15 +10,15 @@
 2. 若它的右子树不为空，右子树上所有的节点的值都大于它的根节点。
 3. 它的左、右子树也都是二分搜索树。
 
-　　如果插入的元素在二分搜索中以及存在根据具体的情况而定，如果不允许重复，直接抛弃即可，如果允许重复可以使用技术的方式，即每个节点保存自己的个数。
+　　如果插入的元素在二分搜索中已经存在，则根据具体的情况而定，如果不允许重复，直接抛弃即可，如果允许重复可以使用计数的方式，即每个节点保存自己的个数。
 
 　　二分搜索树有着高效的插入、删除、查询操作。平均时间复杂度为 O(logn)；最差情况为 O(n)。
 
 ![](image/二分搜索树.png)
 
-## 二分搜索树的基本操作
+## 2. 二分搜索树的基本操作
 
-### 插入操作
+### 2.1. 插入操作
 
 　　根据二分搜索树的定义，二分搜索树的插入操作就比较简单了。
 
@@ -28,15 +30,13 @@
 
 ![](image/二叉搜索树插入.png)
 
+### 2.2. 删除操作
 
+　　删除操作就比插入操作要稍微复杂一点，二分搜索树的删除操作一一般分为几种情况。
 
-### 删除操作
+#### 2.2.1. 如果要删除的节点只有左子树
 
-　　删除操作就比插入操作要少位复杂一点，二分搜索树的删除操作一一般分为几种情况。
-
-#### 如果要删除的节点只有左子树
-
-　　如果要删除的接待你只有左子树，那么直接把它的左子树替换要删除的节点即可。
+　　如果要删除的节点只有左子树，那么直接用它的左子树替换要删除的节点即可。
 
 　　比如要删除节点 3，它只有左子树：
 
@@ -48,7 +48,7 @@
 
 
 
-#### 如果要删除的节点只有右子树
+#### 2.2.2. 如果要删除的节点只有右子树
 
 　　如果要删除的节点只有右子树，直接让其右子树代替要删除的节点即可。
 
@@ -60,7 +60,7 @@
 
 ![](image/二叉搜索树删除节点只有右子树删除后.png)
 
-#### 如果要删除的节点同时拥有左子树和右子树
+#### 2.2.3. 如果要删除的节点同时拥有左子树和右子树
 
 　　如果要删除的节点同时有左子树和右子树，首先找到要删除节点的后继（该节点右子树中的最小值），然后把后继删除并且替换要删除的节点。
 
@@ -80,28 +80,28 @@
 
 ![](image/二叉搜索树删除有左右子树4.png)
 
-### 查询操作
+### 2.3. 查询操作
 
 　　二分搜索树的查询操作和插入操作类似，也是不断地比较，前提是如果相等就不用比较了，如果不能就按照插入的方式进行比较。
 
 　　在比较的过程就把很多无用的元素过滤掉了，所以二分搜索树的插入、删除、查询是很高效的。
 
-## 实现二分搜索树
+## 3. 实现二分搜索树
 
 ```java
 public class BST<T extends Comparable<T>> {
 
     private static class Node<T> {
-        private T value;
-        private Node<T> left, right;
+        private T value; // 存储的值
+        private Node<T> left, right; // 左子树和右子树
 
         public Node(T value) {
             this.value = value;
         }
     }
 
-    private Node<T> root;
-    private int size;
+    private Node<T> root; // 根节点
+    private int size; // 存储的节点个数
 
     public boolean isEmpty() {
         return size == 0;
@@ -111,6 +111,9 @@ public class BST<T extends Comparable<T>> {
         root = add(root, e);
     }
 
+    /**
+   	* 插入节点
+   	*/
     private Node<T> add(Node<T> node, T e) {
         if (node == null) {
             size++;
@@ -165,16 +168,16 @@ public class BST<T extends Comparable<T>> {
         if (root == null) {
             return;
         }
-        Stack<Node<T>> stack = new Stack<>();
-        stack.push(root);
+        Stack<Node<T>> stack = new Stack<>();//用栈来存储
+        stack.push(root); // 入栈
         while (!stack.isEmpty()) {
-            Node<T> n = stack.pop();
+            Node<T> n = stack.pop(); // 出栈
             System.out.print(n.value);
             if (n.right != null) {
-                stack.push(n.right);
+                stack.push(n.right);// 将右子树入栈
             }
             if (n.left != null) {
-                stack.push(n.left);
+                stack.push(n.left); // 将左子树入栈
             }
         }
     }
@@ -215,7 +218,7 @@ public class BST<T extends Comparable<T>> {
         if (root == null) {
             return;
         }
-        Deque<Node> queue = new ArrayDeque<>();
+        Deque<Node> queue = new ArrayDeque<>(); // 双向队列
         queue.addLast(root);
         while (!queue.isEmpty()) {
             Node<T> node = queue.removeFirst();
@@ -298,11 +301,12 @@ public class BST<T extends Comparable<T>> {
         root = remove(root, e);
     }
 
+    // 删除节点
     private Node<T> remove(Node<T> node, T element) {
         if (node == null) {
             return null;
         }
-        //如果要删除的节点小于当前节点，继续查询其左子树
+        // 如果要删除的节点小于当前节点，继续查询其左子树
         if (element.compareTo(node.value) < 0) {
             node.left = remove(node.left, element);
             return node;
@@ -313,8 +317,8 @@ public class BST<T extends Comparable<T>> {
             return node;
         }
 
-        //要删除的节点就是当前的节点
-        //如果要删除节点的左子树为空
+        // 要删除的节点就是当前的节点
+        // 1. 如果要删除节点的左子树为空
         if (node.left == null) {
             Node<T> rightNode = node.right;
             node.right = null;
@@ -322,7 +326,7 @@ public class BST<T extends Comparable<T>> {
             return rightNode;
         }
 
-        // 如果要删除节点的右子树为空
+        // 2. 如果要删除节点的右子树为空
         if (node.right == null) {
             Node<T> leftNode = node.left;
             node.left = null;
@@ -330,7 +334,7 @@ public class BST<T extends Comparable<T>> {
             return leftNode;
         }
 
-        // 如果要删除的节点左右子树都不为空
+        // 3. 如果要删除的节点左右子树都不为空
         // 找到要删除节点的后继，也就是右子树的最小值
         Node<T> successor = getMin(node.right);
         successor.right = removeMin(node.right);
@@ -369,9 +373,9 @@ public void add(T e) {
 
 　　这时因为如果当前二叉搜索树为空，那么新插入的节点就是根节点。如果不为空，也就是对 root 根节点赋值给自己。用递归的方式实现很优雅巧妙。删除操作也是类似的。
 
-## 二分搜索树的不足
+## 4. 二分搜索树的不足
 
-　　一般情况下，二分搜索树有着高效的插入、删除、查询等操作，时间复杂度为 O(longN)。
+　　一般情况下，二分搜索树有着高效的插入、删除、查询等操作，时间复杂度为 O(logN)。
 
 　　但是如果待插入的数据刚好是有序的，那么这个二分搜索树就退化成链表了，也就是为什么二分搜索树的最差时间复杂度为 O(N)。
 
@@ -381,7 +385,7 @@ public void add(T e) {
 
 　　解决这个问题，可以用平衡二叉树。
 
-## 参考文章
+## 5. 参考文章
 
-2. [数据结构与算法（八）二分搜索树(Binary Search Tree)](https://chiclaim.blog.csdn.net/article/details/80598727)
+1. [数据结构与算法（八）二分搜索树(Binary Search Tree)](https://chiclaim.blog.csdn.net/article/details/80598727)
 
