整理+自定义输入法

--- a/system/作业管理.md
+++ b/system/作业管理.md
@@ -1,6 +1,6 @@
 #  作业管理
 
-　　作业状态分为 4 中：提交（通过输入设备送人计算机）、后备（通过 Spooling 系统将作业输入到计算机系统的后备存储器中，等待作业调度程序调度）、执行和完成。
+　　作业状态分为 4 种：提交（通过输入设备送人计算机）、后备（通过 Spooling 系统将作业输入到计算机系统的后备存储器中，等待作业调度程序调度）、执行和完成。
 
 　　常用的作业调度算法：先来先服务、短作业优先、响应比高优先、优先调度算法、均衡调度算法。
 
