--- a/system/操作系统概述.md
+++ b/system/操作系统概述.md
@@ -1,22 +1,16 @@
 #  操作系统概述
 
-
-
 [TOC]
 
 ## 1. 操作系统分类
 
-　　批处理操作系统（单道、多道）、分时操作系统（Unix）、实时操作系统（MsgOS）、网络操作系统、分布式操作系统、微机操作系统（Linux、Windows、IOS 等）、嵌入式操作系统（Android、IOS）。
+　　操作系统分为：批处理操作系统（单道、多道）、分时操作系统（Unix）、实时操作系统（MsgOS）、网络操作系统、分布式操作系统、微机操作系统（Linux、Windows、IOS 等）、嵌入式操作系统（Android、IOS）。
 
 ## 2. 操作系统的 4 个特征
 
 ### 2.1. 并发性
 
-　　区别于并行性，并发是指：多个事件在同一时间间隔内发生，并行是指：多个事件在同一时刻发生。
-
-　　同一段时间内多个程序执行（注意区分并行和并发，前者是同一时刻的多个事件，后者是同一时间端内的多个事件）。
-
-　　并发是指宏观上在一段时间内能同时运行多个程序，而并行则指同一时刻能运行多个指令。
+　　区别于并行性，并发是指宏观上在一段时间内能同时运行多个程序，而并行则指同一时刻能运行多个指令。
 
 　　并行需要硬件支持，如多流水线、多核处理器或者分布式计算系统。
 
@@ -32,17 +26,13 @@
 
 　　有两种共享方式：互斥共享和同时共享。
 
-　　互斥共享的资源称为临界资源，例如打印机等，在统一时刻只允许一个进程访问，需要用同步机制来实现互斥访问。
+　　互斥共享的资源称为临界资源，例如打印机等，在同一时刻只允许一个进程访问，需要用同步机制来实现互斥访问。
 
 ### 2.3. 虚拟性
 
-　　通过某种技术将一个物理实体变为若干个逻辑上的对应物的功能即为虚拟。
+　　通过某种技术将一个物理实体变为若干个逻辑上的对应物的功能即为虚拟，也就是虚拟技术把一个物理实体转换为多个逻辑实体。
 
-　　通过时分复用（如分时系统）以及空分复用（如虚拟内存）技术实现把一个物理实体虚拟为多个。
-
-　　虚拟技术把一个物理实体转换为多个逻辑实体。
-
-　　主要有两种虚拟技术：时（时间）分复用技术和空（空间）分复用技术。
+　　主要有两种虚拟技术：时（时间）分复用技术（如分时系统）和空（空间）分复用技术（如虚拟内存）。
 
 　　多个进程能在同一个处理器上并发执行使用了时分复用技术，让每个进程轮流占用处理器，每次只执行一小个时间片并快速切换。
 
@@ -50,45 +40,37 @@
 
 ### 2.4. 异步
 
-　　每道程序完成的时间都是不可预知的，进程是以人们不可预知的速度向前推进的。
-
-　　系统中的进程是以走走停停的方式执行的，且以一种不可预知的速度推进。
-
-　　异步指进程不是一次性执行完毕，而是走走停停，以不可知的速度向前推进。
+　　异步指进程不是一次性执行完毕，而是走走停停，每道程序完成的时间都是不可预知的，进程是以不可知的速度向前推进。
 
 ## 3. 操作系统的基本功能
 
-　　操作系统的功能有：进程管理、文件管理、‘存储管理、设备管理、作业管理。
+　　操作系统的功能有：进程管理、文件管理、存储管理、设备管理、作业管理。
 
-1. 进程管理
+### 3.1. 进程管理
 
-   进程控制、进程同步、进程通信、死锁处理、处理机调度等。
+　　也称处理机管理，实质上是对处理机执行时间进行管理，采用多道程序等技术将 CPU 的时间真正合理地分配给每个任务。
 
-   也称处理机管理。实质上是对处理机执行时间进行管理，采用多道程序等技术将 CPU 的时间真正合理地分配给每个任务。主要包括进程管理、进程同步、进程通信和进程调度。
+　　主要包括进程管理、进程同步、进程通信和进程调度。
 
-2. 文件管理
+### 3.2. 文件管理
 
-   文件存储空间的管理、目录管理、文件读写管理和保护等。
+　　又称信息管理，主要包括文件存储空间管理、目录管理、文件读写管理和存取管理。
 
-   又称信息管理。主要包括文件存储空间管理、目录管理、文件地读写管理和存取管理。
+### 3.3. 内存管理
 
-3. 内存管理
+　　也称为存储管理，是对主存储器空间的管理。
 
-   内存分配、地址映射、内存保护与共享、虚拟内存等。
+　　主要包括存储分配与回收、存储保护与共享、地址映射（变换）和主存扩充。
 
-   也称为存储管理。是对主存储器空间地管理。主要包括存储分配与回收、存储保护、地址映射（变换）和主存扩充。（即内存管理）
+### 3.4. 设备管理
 
-4. 设备管理
+　　实质上是对硬件设备进行管理，完成用户的 I/O 请求，方便用户使用各种设备，并提高设备的利用率。
 
-   完成用户的 I/O 请求，方便用户使用各种设备，并提高设备的利用率。
+　　其中包括缓冲管理、输入输出设备的分配、启动、完成和回收、设备处理、虚拟设备。
 
-   主要包括缓冲管理、设备分配、设备处理、虚拟设备等。
+### 3.5. 作业管理
 
-   实质上是对硬件设备进行管理，其中包括输入输出设备地分配、启动、完成和回收。
-
-5. 作业管理
-
-   包括人物、人机交互和用户界面管理等。
+　　包括人物、人机交互和用户界面管理等。
 
 ## 4. 系统调用
 
@@ -129,7 +111,7 @@
 
 ### 6.1. 外中断
 
-　　由 CPU 执行指令以外的事件引起，如 I/O 完成中断，表示设备输入/输出处理已经完成，处理器能够发送下一个输入/输出请求。
+　　由 CPU 执行指令以外的事件引起，如 I/O 完成中断，表示设备输入 / 输出处理已经完成，处理器能够发送下一个输入 / 输出请求。
 
 ### 6.2. 异常
 
@@ -139,7 +121,7 @@
 
 　　在用户程序中使用系统调用。
 
-## 参考文章
+## 7. 参考文章
 
 1. [操作系统基础知识总结整理](https://blog.csdn.net/Song_JiangTao/article/details/79670805)
 3. [计算机操作系统](https://github.com/CyC2018/CS-Notes/blob/master/notes/计算机操作系统 - 目录.md)
