--- a/项目信息/项目信息收集.md
+++ b/项目信息/项目信息收集.md
@@ -42,4 +42,5 @@ Android 音视频系列：视频容器操作篇--mp4 容器打包实现
 ## Kotlin
 1. https://www.jianshu.com/p/a05b10976b08 推荐一个 kotlin 项目
 2. https://www.wanandroid.com/blog/show/2774  一款高仿 Eyepetizer | 开眼短视频的 MVVM 开源项目
+3. https://github.com/VIPyinzhiwei/Eyepetizer 非常适合入门 Kotlin 语言、进阶，或快速掌握 Jatpack 组件、学习 MVVM 架构
 
